[package]
name = "bcndecode-sys"
version = "0.1.0"
authors = ["ScanMountGoat <>"]
description = "Rust bindings to bcndecode"
license = "MIT"
documentation = "https://docs.rs/bcndecode-sys"
repository = "https://github.com/ScanMountGoat/image_dds"
readme = "../README.md"
edition = "2021"

[build-dependencies]
cc = "1.0"
bindgen = "0.53.1"