[package]
name = "image_dds"
version = "0.4.0"
authors = ["ScanMountGoat <>"]
description = "Convert images to and from compressed DDS formats"
license = "MIT"
documentation = "https://docs.rs/image_dds"
repository = "https://github.com/ScanMountGoat/image_dds"
readme = "../README.md"
edition = "2021"

[dependencies]
intel_tex_2 = { version = "0.2.1", optional = true }
image = { version = "0.24.5", optional = true }
ddsfile = { version = "0.5.1", optional = true }
bcndecode-sys = { version = "0.1.0", path = "../bcndecode-sys", optional = true }
thiserror = "1.0.38"
arbitrary = { version = "1.2.2", features = ["derive"], optional = true }
half = { version = "2.2.1", features = ["bytemuck"] }
bytemuck = "1.13.0"
strum = { version = "0.24", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "dds_from_image"
harness = false

[[bench]]
name = "image_from_dds"
harness = false

[[bench]]
name = "imagef32_from_dds"
harness = false

[features]
default = ["ddsfile", "image", "encode", "decode", "strum"]
encode = ["dep:intel_tex_2"]
decode = ["dep:bcndecode-sys"]