[package]
name = "bcdec_rs_fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bcndecode-sys = { path = "../../bcndecode-sys" }

[dependencies.bcdec_rs]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "bc1"
path = "fuzz_targets/bc1.rs"
test = false
doc = false

[[bin]]
name = "bc2"
path = "fuzz_targets/bc2.rs"
test = false
doc = false

[[bin]]
name = "bc3"
path = "fuzz_targets/bc3.rs"
test = false
doc = false

[[bin]]
name = "bc4"
path = "fuzz_targets/bc4.rs"
test = false
doc = false

[[bin]]
name = "bc5"
path = "fuzz_targets/bc5.rs"
test = false
doc = false
