[package]
name = "image_dds-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = "1.0"

[dependencies.image_dds]
path = ".."
features = ["arbitrary"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode_surface_rgba8"
path = "fuzz_targets/decode_surface_rgba8.rs"
test = false
doc = false

[[bin]]
name = "encode_surface_rgba8"
path = "fuzz_targets/encode_surface_rgba8.rs"
test = false
doc = false

[[bin]]
name = "decode_surface_rgba8_single_block"
path = "fuzz_targets/decode_surface_rgba8_single_block.rs"
test = false
doc = false

[[bin]]
name = "decode_surface_rgbaf32"
path = "fuzz_targets/decode_surface_rgbaf32.rs"
test = false
doc = false

[[bin]]
name = "encode_surface_rgbaf32"
path = "fuzz_targets/encode_surface_rgbaf32.rs"
test = false
doc = false
